# grace-pat

./: .env  Cargo.toml  config.json  diesel.toml  docker-compose.yml
src/: lib.rs  main.rs  utils.rs
src/auth/: authentication.rs  error.rs  mod.rs
src/database/: error.rs  mod.rs  model.rs  queries.rs  schema.rs
src/database/migrations/00000000000000_diesel_initial_setup/: up.sql
src/web/: delete.rs  everify.rs  login.rs  mod.rs  signup.rs
