[package]
name = "grace"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.4", features = ["postgres"] }
diesel-async = { version = "0.5.0", features = ["deadpool", "postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
